[gd_scene load_steps=41 format=3 uid="uid://byqwrxtmyt6ql"]

[ext_resource type="Script" path="res://scripts/characters/character.gd" id="1_qkru6"]
[ext_resource type="Texture2D" uid="uid://c4i8g6inr645q" path="res://art/Character spritesheets/the guy/the guy.png" id="2_x0j30"]
[ext_resource type="Texture2D" uid="uid://cwo8klrmqcb4n" path="res://art/Character spritesheets/the guy/the guy walking-sheet.png" id="3_f3b57"]
[ext_resource type="Texture2D" uid="uid://cfbl3h2t2n2lj" path="res://art/Character spritesheets/the guy/the guy_hurt_down.png" id="4_insye"]
[ext_resource type="Texture2D" uid="uid://de114upjslulx" path="res://art/Character spritesheets/the guy/Right-Sideways-guy1-sheet.png" id="5_1yo43"]
[ext_resource type="Texture2D" uid="uid://vr0502el1pev" path="res://art/Character spritesheets/the guy/Left-Sideways-guy1-sheet-sheet.png" id="6_kpbx2"]
[ext_resource type="Texture2D" uid="uid://c4xdf2g5unbrw" path="res://art/Character spritesheets/the guy/side_hurt.png" id="7_7hp2t"]
[ext_resource type="Texture2D" uid="uid://btt12jfiyqha7" path="res://art/Character spritesheets/the guy/the guy up idle.png" id="8_6t5c8"]
[ext_resource type="Texture2D" uid="uid://cy436emcu3h7g" path="res://art/Character spritesheets/the guy/the guy behind walking1-sheet-sheet.png" id="9_afq34"]
[ext_resource type="Texture2D" uid="uid://lqyp3yuetoga" path="res://art/Character spritesheets/the guy/Behind_hurtt.png" id="10_1vxo0"]
[ext_resource type="Texture2D" uid="uid://d12o3rc4nnlpt" path="res://art/Weapons/wood sword 1.png" id="11_ec3om"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vbbgd"]
atlas = ExtResource("2_x0j30")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyxsg"]
atlas = ExtResource("2_x0j30")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8ulv"]
atlas = ExtResource("3_f3b57")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_woams"]
atlas = ExtResource("3_f3b57")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x68y"]
atlas = ExtResource("3_f3b57")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh1ul"]
atlas = ExtResource("3_f3b57")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kort"]
atlas = ExtResource("4_insye")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldvnw"]
atlas = ExtResource("5_1yo43")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr2al"]
atlas = ExtResource("5_1yo43")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn3sh"]
atlas = ExtResource("6_kpbx2")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p013p"]
atlas = ExtResource("6_kpbx2")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyojc"]
atlas = ExtResource("7_7hp2t")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgvrc"]
atlas = ExtResource("8_6t5c8")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdji0"]
atlas = ExtResource("8_6t5c8")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni7uo"]
atlas = ExtResource("9_afq34")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aufx5"]
atlas = ExtResource("9_afq34")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxuep"]
atlas = ExtResource("9_afq34")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk50r"]
atlas = ExtResource("9_afq34")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5udhw"]
atlas = ExtResource("10_1vxo0")
region = Rect2(0, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ncipj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbbgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyxsg")
}],
"loop": true,
"name": &"down idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8ulv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_woams")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x68y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh1ul")
}],
"loop": true,
"name": &"down walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kort")
}],
"loop": true,
"name": &"hurt_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldvnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr2al")
}],
"loop": true,
"name": &"side idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn3sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p013p")
}],
"loop": true,
"name": &"side walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyojc")
}],
"loop": true,
"name": &"side_hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgvrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdji0")
}],
"loop": true,
"name": &"up idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni7uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aufx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxuep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk50r")
}],
"loop": true,
"name": &"up walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5udhw")
}],
"loop": true,
"name": &"up_hurt",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_k6git"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_led8w"]
radius = 204.245

[sub_resource type="Animation" id="Animation_df25q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword sprites:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.733249]
}

[sub_resource type="Animation" id="Animation_r4goc"]
resource_name = "Sword up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(13, -14), Vector2(0, -24), Vector2(-12, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.733249, -0.855211, -2.35288]
}

[sub_resource type="Animation" id="Animation_v8f5i"]
resource_name = "Wood sword down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00181474, 0.3, 0.497239),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6, 2), Vector2(0, 7), Vector2(-9, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00181474, 0.3, 0.498448),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.733249, 2.287, 3.91652]
}

[sub_resource type="Animation" id="Animation_w4k42"]
resource_name = "left sword"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(8, -21), Vector2(14, -5), Vector2(9, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.774565, 0.782798, 2.3351]
}

[sub_resource type="Animation" id="Animation_7l6uo"]
resource_name = "sword right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-7, 8), Vector2(-14, -3), Vector2(-9, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.3351, 3.93847, 5.49692]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_21a2q"]
_data = {
"RESET": SubResource("Animation_df25q"),
"Sword up": SubResource("Animation_r4goc"),
"Wood sword down": SubResource("Animation_v8f5i"),
"left sword": SubResource("Animation_w4k42"),
"sword right": SubResource("Animation_7l6uo")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrcl5"]
size = Vector2(5.24342, 18.6831)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_qkru6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -5)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_ncipj")
animation = &"down idle"

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.08165e-12, 2)
shape = SubResource("CircleShape2D_k6git")

[node name="combat_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="combat_hitbox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_led8w")

[node name="sword sprites" type="Sprite2D" parent="."]
position = Vector2(8, -21)
rotation = 0.733249
scale = Vector2(0.8, 0.8)
texture = ExtResource("11_ec3om")

[node name="sword" type="AnimationPlayer" parent="sword sprites"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_21a2q")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="sword sprites"]
position = Vector2(0.515782, -0.31943)
rotation = 0.813053
shape = SubResource("RectangleShape2D_qrcl5")

[node name="weapon_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="player_hurt_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="stamina_regen_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="dashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="body_entered" from="combat_hitbox" to="." method="_on_combat_hitbox_body_entered"]
[connection signal="body_exited" from="combat_hitbox" to="." method="_on_combat_hitbox_body_exited"]
[connection signal="animation_finished" from="sword sprites/sword" to="." method="_on_sword_animation_finished"]
[connection signal="timeout" from="weapon_cooldown" to="." method="_on_weapon_cooldown_timeout"]
[connection signal="timeout" from="player_hurt_timer" to="." method="_on_player_hurt_timer_timeout"]
[connection signal="timeout" from="stamina_regen_timer" to="." method="_on_stamina_regen_timer_timeout"]
